feat: add prototype for fluent command interface

--- a/packages/ui-testbed/src/assets/public/index.html
+++ b/packages/ui-testbed/src/assets/public/index.html
@@ -11,6 +11,9 @@
     <button onclick="send('disconnect')">Disconnect</button>
 
     <h2>Other</h2>
+    <button onclick="send('mute/4')">Mute 4</button>
+    <button onclick="send('unmute/4')">Unmute 4</button>
+    <button onclick="send('togglemute/4')">Toggle mute 4</button>
     <button onclick="send('dim/1')">DIM 1</button>
     <button onclick="send('dim/0')">DIM 0</button>
 
