feat: add proper connection handling
- Status messages
- reconnect after error
- message streams survive reconnect
resolve #13
might also have fixed #6, but let's keep an eye on this

--- a/packages/ui-testbed/src/assets/public/index.html
+++ b/packages/ui-testbed/src/assets/public/index.html
@@ -18,7 +18,8 @@
     <div>
       <h2>Soundcraft IP</h2>
       <input type="text" id="soundcraftip" value="10.75.23.95" />
-      <button onclick="connect()">Connect</button>
+      <button onclick="connect()">Connect to IP</button>
+      <button onclick="send('connect')">Connect</button>
       <button onclick="send('disconnect')">Disconnect</button>
     </div>
 
