feat(ui-testbed): make mixer IP configurable
add endpoint to configure ip and input field on HTML page
resolve #15

--- a/packages/ui-testbed/src/assets/public/index.html
+++ b/packages/ui-testbed/src/assets/public/index.html
@@ -15,6 +15,13 @@
     </style>
   </head>
   <body>
+    <div>
+      <h2>Soundcraft IP</h2>
+      <input type="text" id="soundcraftip" value="10.75.23.95" />
+      <button onclick="connect()">Connect</button>
+      <button onclick="send('disconnect')">Disconnect</button>
+    </div>
+
     <div id="container"></div>
     <script src="./script.js"></script>
   </body>
