refactor(testbed): rename comp selectors, use self-closing tags

--- a/packages/testbed/src/index.html
+++ b/packages/testbed/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <soundcraft-ui-root></soundcraft-ui-root>
+    <sui-root></sui-root>
   </body>
 </html>
